[package]
name = "peach-lib"
version = "1.0.1"
authors = ["Andrew Reid <gnomad@cryptolab.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
jsonrpc-client-core = "0.5"
jsonrpc-client-http = "0.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
